# chr_aln

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  chaining.cpp  chaining.hpp  cigar.hpp  helpers.cpp  helpers.hpp  main.cpp  monotone_diagonal_profile.hpp  offset_vector.hpp  profiler.hpp  readers.hpp  repeat_aligner.cpp  repeat_aligner.hpp  wfa_main.hpp  wfa_switch.cpp  wfa_switch.hpp
tests/: test_chaining.cpp  test_seeding.cpp  test_wfa.cpp
